--- a/css/billettsalg.css
+++ b/css/billettsalg.css
@@ -57,7 +57,8 @@ main {
   text-align: center;
   color: #fff;
 }
-
+/*Hele billett systemet er laget av meg. Ingen innspill fra andre sider. Dette er timer med testing før jeg kom frem til 
+et resultat jeg ble fornøyd med*/
 .billett-container {
   margin: 2rem 0 0 0;
   position: relative;
@@ -78,6 +79,7 @@ main {
   grid-template-rows: 5rem 6rem 4rem;
   justify-content: flex-start;
   font-size: 1.1rem;
+  text-align: center;
   color: #0a1256;
 }
 
