--- a/css/kontakt-oss.css
+++ b/css/kontakt-oss.css
@@ -13,7 +13,7 @@ p {
 .main-container {
   margin-inline: auto;
   position: relative;
-  height: 100%;
+  height: 100vh;
   background-image: repeating-linear-gradient(
     to bottom,
     #2ddbe7 0%,
@@ -48,9 +48,32 @@ ul {
   gap: 2.4em;
 }
 
-a:link,
-a:visited {
+/*Denne ideen til en type link style fikk jeg fra Kevin Powell på denne siden https://www.youtube.com/watch?v=ceNMP-aQkQ4
+Be utrolig fornøyd med resultatet*/
+.top-link {
+  text-decoration: none;
   color: #fff;
+  position: relative;
+  font-size: 1.4rem;
+}
+
+.top-link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #ffcfde;
+
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+
+.top-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 main {
@@ -80,6 +103,12 @@ main {
   font-size: 1.1rem;
   color: #0a1256;
   text-align: center;
+  cursor: pointer;
+}
+
+.info:hover {
+  transform: scale(1.1);
+  transition: transform ease-in-out 400ms;
 }
 
 .telefon {
@@ -113,6 +142,7 @@ main {
   font-size: 1.2rem;
   padding: 2.5rem 0;
   width: 100%;
+  height: 50vh;
 }
 
 .split {
@@ -180,6 +210,10 @@ input[type="submit"]:hover {
     position: relative;
     list-style: none;
     gap: 1em;
+    padding: 0 1rem 0 0;
+  }
+  main {
+    padding: 0 2rem;
   }
   .main-container {
     display: flex;
